Replace DOM Excel reader with SAX streaming to handle 10k+ records without OOM